tests/ui/feature-gates/feature-gate-explicit-extern-abis.future_feature.stderr
error: extern declarations without an explicit ABI are disallowed
  --> $DIR/feature-gate-explicit-extern-abis.rs:24:1
   |
LL | extern fn _foo() {}
   | ^^^^^^

error: aborting due to 1 previous error

